--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
           </div>
           <div id="propg" class="propg">
             <div class="card">
-              <a href="pomodoro.html">
-                <h1>POMODORO TIMER</h1>
+              <a href="omodoro.html">
+                <h1>THE OMODORO TIMER</h1>
               </a>
             </div>
           </div>
