minute - oh very big updated style

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="card">
               <a href="omodoro.html">
                 <h1>THE OMODORO TIMER</h1>
-              </a>  
+              </a>
             </div>
           </div>
           <div id="pg2" class="pg2">
@@ -131,31 +131,27 @@
               <div class="btns">
                 <button>
                   <a href="https://github.com/schoolop08" target="_blank"
-                    ><img
-                      src="https://skillicons.dev/icons?i=github"
-                    />Github</a
-                  >
+                    ><img src="https://skillicons.dev/icons?i=github"
+                  /></a>
                 </button>
                 <button>
                   <a href="https://www.instagram.com/opsahoo08/" target="_blank"
-                    ><img
-                      src="https://skillicons.dev/icons?i=instagram"
-                    />Instagram</a
-                  >
+                    ><img src="https://skillicons.dev/icons?i=instagram"
+                  /></a>
                 </button>
                 <button>
                   <a href="mailto:opsahoo08@gmail.com" target="_blank"
-                    ><img src="https://skillicons.dev/icons?i=gmail" />gMail</a
-                  >
+                    ><img src="https://skillicons.dev/icons?i=gmail"
+                  /></a>
                 </button>
               </div>
             </div>
           </div>
-          <div id="propg" class="propg">
+          <footer>
             <div class="card">
-              <h1>Radhe Radhe 🙏<br />May your Day be Excellent!</h1>
+              <p>Radhe Radhe 🙏May your Day be Excellent!</p>
             </div>
-          </div>
+          </footer>
         </div>
       </div>
     </div>
