--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="cursor.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="shortcut icon" href="ASSETS/OPS LOGO.svg" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Anton&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
@@ -68,8 +69,9 @@
   <body>
     <div class="bodycontainer">
       <div class="nav">
-        <div class="name">
-          <h4><b>O</b>m <b>P</b>rakash <b>S</b>ahoo</h4>
+        <div class="logo">
+          <img src="ASSETS/OPS LOGO.svg" alt="logo" />
+          <!-- <h4><b>O</b>m <b>P</b>rakash <b>S</b>ahoo</h4> -->
         </div>
         <div class="menu">
           <button><a href="#propg">Tools</a></button>
@@ -81,7 +83,7 @@
           <div id="pg1" class="pg1">
             <div class="card">
               <div class="ppsec">
-                <img src="profile-pic.png" alt="This is Om" class="pp" />
+                <img src="ASSETS/profile-pic.png" alt="This is Om" class="pp" />
                 <div class="headc">
                   <h1>Om Prakash Sahoo</h1>
                   <h3>
