--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Anton&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <title>OPS</title>
+    <title>Om Prakash Sahoo || Developer Portfolio Website</title>
     <!-- SEO Settings -->
     <meta
       name="google-site-verification"
@@ -58,8 +58,8 @@
         "subjectOf": [
           {
             "@type": "CreativeWork",
-            "name": "Pomodoro Timer",
-            "url": "https://opsahoo.netlify.app/pomodoro.html",
+            "name": "Omodoro Timer",
+            "url": "https://opsahoo.netlify.app/omodoro.html",
             "description": "A productivity tool implementing the Pomodoro technique."
           }
         ]
